--- a/dapi/test/fixtures/campaigns.yml
+++ b/dapi/test/fixtures/campaigns.yml
@@ -1,154 +1,35 @@
-﻿# coding: utf-8
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-# 動作確認用データ
-success_confirm:
-  mid: CampaignSuccessConfirm
-  enq_id: EnqStatus1
-  status: 1
-  platform: mixi
-  point: 10
-  opening_at: 2000-1-1 0:0:0
-  closing_at: 2100-1-1 0:0:0
-  movie: /video/yomeishu.mov
-  thumbnail: /images/poster-pc.jpg
-  message: キャンペーン1メッセージ
-  conversion_tag: cnvtag1
-  second_picture: /images/creative-sp.jpg
-  banner_title: banner1
-  second_point: 10
-  client_url: http://cdn.poncan.jp
-
-# nil動作確認用のデータ
-nullable:
-  mid: CampaignNullable
-  enq_id: EnqNullable
-  status: 1
-  platform: gree
-  point: 40 
-  
-# 異常系の確認用データ
-# アンケートの最初のページがNull
-first_page_null:
-  mid: FirstPageNullCampaignID
-  enq_id: FirstPageNullEnqID
-  status: 1
-  platform: mixi
-  point: 10
-  opening_at: 2000-1-1 0:0:0
-  closing_at: 2100-1-1 0:0:0
-  movie: /video/yomeishu.mov
-  thumbnail: /images/poster-pc.jpg
-  message: キャンペーンメッセージ
-  conversion_tag: cnvtag1
-  second_picture: /images/creative-sp.jpg
-  banner_title: banner1
-  second_point: 10
-  client_url: http://cdn.poncan.jp
-
-# キャンペーンの状態が入稿前
-camp_status0:
-  mid: CampaignStatus0CampaignID
-  enq_id: CampaignStatus0EnqID
-  status: 0
-  platform: gree
-  point: 20
-  opening_at: 2100-1-1 0:0:0
-  closing_at: 2100-1-1 0:0:0
-  movie: /video/yomeishu.mov
-  thumbnail: /images/poster-pc.jpg
-  message: キャンペーン2メッセージ
-  conversion_tag: cnvtag2
-  second_picture: /images/creative-sp.jpg
-  banner_title: banner2
-  second_point: 20
-  client_url: http://cdn.poncan.jp
-
-# キャンペーンが終了
-# キャンペーンの状態が終了
-camp_status9:
-  mid: CampaignStatus9CampaignID
-  enq_id: CampaignClosedEnqID
-  status: 9
-  platform: mixi
-  point: 30
-  opening_at: 2000-1-1 0:0:0
-  closing_at: 2100-1-1 0:0:0
-  movie: /video/yomeishu.mov
-  thumbnail: /images/poster-pc.jpg
-  message: キャンペーン3メッセージ
-  conversion_tag: cnvtag3
-  second_picture: /images/creative-sp.jpg
-  banner_title: banner3
-  second_point: 30
-  client_url: http://cdn.poncan.jp
-
-# キャンペーンが終了日時を過ぎている
-camp_closed:
-  mid: CampaignClosedCampaignID
-  enq_id: CampaignClosedEnqID
-  status: 1
-  platform: gree
-  point: 40
-  opening_at: 2000-1-1 0:0:0
-  closing_at: 2012-1-1 0:0:0
-  movie: /video/yomeishu.mov
-  thumbnail: /images/poster-pc.jpg
-  message: キャンペーン4メッセージ
-  conversion_tag: cnvtag4
-  second_picture: /images/creative-sp.jpg
-  banner_title: banner4
-  second_point: 40
-  client_url: http://cdn.poncan.jp
-
-# 設問と選択肢が矛盾している
-incons_question:
-  mid: InconsistencyQuestionCampaignID
-  enq_id: InconsistencyQuestionEnqID
-  status: 1
-  platform: gree
-  point: 40
-  opening_at: 2000-1-1 0:0:0
-  closing_at: 2012-1-1 0:0:0
-  movie: /video/yomeishu.mov
-  thumbnail: /images/poster-pc.jpg
-  message: キャンペーン4メッセージ
-  conversion_tag: cnvtag4
-  second_picture: /images/creative-sp.jpg
-  banner_title: banner4
-  second_point: 40
-  client_url: http://cdn.poncan.jp
-
-
-# 養命酒
-yomei_shu:
-  mid: YomeiShuCampaignID
-  enq_id: YomeiShuEnqID
-  status: 1
-  platform: mixi
-  point: 13
-  opening_at: 2012-1-1 0:0:0
-  closing_at: 2100-1-1 0:0:0
-  movie: /video/yomeishu.mov
-  client_url: http://www.yomeishu.co.jp/megumi/kaorisu
-  
-
-# プラスワン
-plus_one:
-  mid: PlusOneCampaignID
-  enq_id: PlusOneEnqID
-  status: 1
-  platform: mixi
-  point: 10
-  opening_at: 2012-1-1 0:0:0
-  closing_at: 2100-1-1 0:0:0
-  movie: /images/media/plus1_sp.mp4
-  thumbnail: /images/poster-sp.jpg
-  message: 
-  conversion_tag: 
-  second_picture: /images/creative-sp.jpg
-  banner_title: 
+one:
+  status: 
+  platform: MyString
+  point: 
+  opening_at: 2012-06-10 00:25:34
+  closing_at: 2012-06-10 00:25:34
+  movie: MyString
+  thumbnail: MyString
+  message: MyText
+  conversion_tag: MyText
+  second_picture: MyString
+  banner_title: MyString
   second_point: 
-  client_url: http://ponkan.jp
-  
-  
+  client_url: MyString
+  created_by: MyString
+  updated_by: MyString
+
+two:
+  status: 
+  platform: MyString
+  point: 
+  opening_at: 2012-06-10 00:25:34
+  closing_at: 2012-06-10 00:25:34
+  movie: MyString
+  thumbnail: MyString
+  message: MyText
+  conversion_tag: MyText
+  second_picture: MyString
+  banner_title: MyString
+  second_point: 
+  client_url: MyString
+  created_by: MyString
+  updated_by: MyString
