--- a/dapi/test/fixtures/enq_faces.yml
+++ b/dapi/test/fixtures/enq_faces.yml
@@ -1,161 +1,15 @@
-﻿# coding: utf-8
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-# スマートフォン用の動作確認データ
-sc_SP:
-  uuid: EnqSPSuccessConfirm
-  enq_id: EnqStatus1
-  face: SP
-  first_page_id: EnqSPSuccessConfirmPage1
-  wait_until: 30
-  css: /css/sp/themes/sample-1/style.css
-  title: アンケート1SP
-  description: アンケート1説明SP
+one:
+  enq_id: MyString
+  face: TO
+  first_page_id: MyString
+  wait_until: 2012-06-03 18:07:08
+  css: MyString
 
-# PC用の動作確認データ
-sc_PC:
-  uuid: EnqPCSuccessConfirm
-  enq_id: EnqStatus1
+two:
+  enq_id: MyString
   face: PC
-  first_page_id: EnqPCSuccessConfirmPage1
-  wait_until: 30
-  css: /css/pc/themes/sample-1/style.css
-  title: アンケート1PC
-  description: アンケート1説明PC
-
-# スマートフォン用のnil動作確認データ
-nullable_SP:
-  uuid: EnqSPNullable
-  enq_id: EnqNullable
-  face: SP
-  
-# PC用のnil動作確認データ
-nullable_PC:
-  uuid: EnqPCNullable
-  enq_id: EnqNullable
-  face: PC
-
-# 異常系の確認用データ
-# アンケートの最初のページがNull
-first_page_null_SP:
-  uuid: FirstPageNullEnqFaceSPID
-  enq_id: FirstPageNullEnqID
-  face: SP
-  first_page_id: 
-  wait_until: 30
-  css: /css/sp/themes/sample-1/style.css
-  title: アンケートの最初のページがNull
-  description: アンケートの最初のページがNull
-
-first_page_null_PC:
-  uuid: FirstPageNullEnqFacePCID
-  enq_id: FirstPageNullEnqID
-  face: PC
-  first_page_id: 
-  wait_until: 30
-  css: /css/pc/themes/sample-1/style.css
-  title: アンケートの最初のページがNull
-  description: アンケートの最初のページがNull
-
-# キャンペーンの状態が入稿前
-camp_status0_SP:
-  uuid: CampaignStatus0EnqFaceSPID
-  enq_id: CampaignStatus0EnqID
-  face: SP
-  first_page_id: CampaignStatus0EnqPageSPID
-  wait_until: 30
-  css: /css/sp/themes/sample-1/style.css
-  title: キャンペーンの状態が入稿前
-  description: キャンペーンの状態が入稿前
-
-camp_status0_PC:
-  uuid: CampaignStatus0EnqFacePCID
-  enq_id: CampaignStatus0EnqID
-  face: PC
-  first_page_id: CampaignStatus0EnqPagePCID
-  wait_until: 30
-  css: /css/pc/themes/sample-1/style.css
-  title: キャンペーンの状態が入稿前
-  description: キャンペーンの状態が入稿前
-
-# キャンペーンの状態が終了
-camp_closed_SP:
-  uuid: CampaignClosedEnqFaceSPID
-  enq_id: CampaignClosedEnqID
-  face: SP
-  first_page_id: CampaignClosedEnqPageSPID
-  wait_until: 30
-  css: /css/sp/themes/sample-1/style.css
-  title: キャンペーンの状態が入稿前
-  description: キャンペーンの状態が入稿前
-
-camp_closed_PC:
-  uuid: CampaignClosedEnqFacePCID
-  enq_id: CampaignClosedEnqID
-  face: PC
-  first_page_id: CampaignClosedEnqPagePCID
-  wait_until: 30
-  css: /css/pc/themes/sample-1/style.css
-  title: キャンペーンの状態が終了
-  description: キャンペーンの状態が終了
-
-# 設問と選択肢が矛盾している
-incons_question_SP:
-  uuid: InconsistencyQuestionEnqFaceSPID
-  enq_id: InconsistencyQuestionEnqID
-  face: SP
-  first_page_id: InconsistencyQuestionEnqPageSPID
-  wait_until: 30
-  css: /css/sp/themes/sample-1/style.css
-  title: 設問と選択肢が矛盾している
-  description: 設問と選択肢が矛盾している
-
-incons_question_PC:
-  uuid: InconsistencyQuestionEnqFacePCID
-  enq_id: InconsistencyQuestionEnqID
-  face: PC
-  first_page_id: InconsistencyQuestionEnqPagePCID
-  wait_until: 30
-  css: /css/pc/themes/sample-1/style.css
-  title: 設問と選択肢が矛盾している
-  description: 設問と選択肢が矛盾している
-
-
-# 養命酒
-yomei_shu_SP:
-  uuid: YomeiShuSPEnqFaceID
-  enq_id: YomeiShuEnqID
-  face: SP
-  first_page_id: YomeiShuEnqPage1
-  wait_until: 30
-  title: 動画キャンペーン
- 
-yomei_shu_PC:
-  uuid: YomeiShuPCEnqFaceID
-  enq_id: YomeiShuEnqID
-  face: PC
-  first_page_id: YomeiShuEnqPage1
-  wait_until: 30
-  title: 動画キャンペーン
- 
-# プラスワン
-plus_one_SP:
-  uuid: PlusOneSPEnqFaceID
-  enq_id: PlusOneEnqID
-  face: SP
-  first_page_id: PlusOneSPEnqPage1
-  wait_until: 
-  css: /css/sp/themes/plus-1/style.css
-  title: 
-  description: 
- 
-plus_one_PC:
-  uuid: PlusOnePCEnqFaceID
-  enq_id: PlusOneEnqID
-  face: PC
-  first_page_id: PlusOnePCEnqPage1
-  wait_until: 
-  css: /css/pc/themes/plus-1/style.css
-  title: 
-  description: 
- 
+  first_page_id: MyString
+  wait_until: 2012-06-03 18:07:08
+  css: MyString
