--- a/dapi/test/fixtures/questions.yml
+++ b/dapi/test/fixtures/questions.yml
@@ -1,268 +1,17 @@
-# coding: utf-8
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-# 動作確認データ
-radio:
-  uuid: QuestionRadio
-  kind: radio
-  title: 性別
-  content: 性別を選択してください
-  required: true
-
-numeric:
-  uuid: QuestionNumeric
-  kind: numeric
-  title: 年齢
-  content: 年齢を選択してください
-  required: true
-
-select:
-  uuid: QuestionSelect
-  kind: select
-  title: 選択問題
-  content: 選択肢から選択してください
-  required: true
-  answer_content: 選択肢問題正解
-  answer_description: 選択肢問題の正解です
-
-prefectures:
-  uuid: QuestionPrefectures
-  kind: select
-  title: 都道府県
-  content: 出身地を選択してください
-  required: true
-  
-check:
-  uuid: QuestionCheck
-  kind: check
-  title: チェックボックス
-  content: チェックボックスから選択してください
+one:
+  kind: MyString
+  title: MyString
+  content: MyText
   required: false
+  answer_content: MyText
+  answer_description: MyText
 
-text:
-  uuid: QuestionText
-  kind: text
-  title: テキスト問題
-  content: テキスト問題です
+two:
+  kind: MyString
+  title: MyString
+  content: MyText
   required: false
-  answer_content: テキスト問題正解
-  answer_description: テキスト問題の正解です
-
-textarea:
-  uuid: QuestionTextarea
-  kind: textarea
-  title: テキストエリア
-  content: テキストエリアです
-  required: false
-
-# nil要素動作確認用
-nullable_q1:
-  uuid: NullableQuestion1
-  kind: text
-  answer_content: nil要素確認用
- 
-nullable_q2_1:
-  uuid: NullableQuestion2-1
-  kind: text
-  required: false
- 
-nullable_q2_2:
-  uuid: NullableQuestion2-2
-  kind: text
-  required: false
-
-# 異常系の確認用データ
-# 設問と選択肢が矛盾している
-incons_question:
-  uuid: QuestionInconsistency
-  kind: select
-  title: 設問と選択肢が矛盾している
-  content: 設問と選択肢が矛盾している
-  required: true
-  answer_content: 設問と選択肢が矛盾している
-  answer_description: 設問と選択肢が矛盾している
-
-  
-# 養命酒
-yomei_shu_question1:
-  uuid: YomeiShuQuestion1
-  kind: radio
-  title: 性別をお答えください。
-  required: true
-
-yomei_shu_question2:
-  uuid: YomeiShuQuestion2
-  kind: numeric
-  title: 年齢をお答えください。
-  required: true
-
-yomei_shu_question3:
-  uuid: YomeiShuQuestion3
-  kind: select
-  title: このCMをご覧になって「ハーブの恵み」の香りに興味を持たれましたか？
-  required: true
-
-yomei_shu_question4:
-  uuid: YomeiShuQuestion4
-  kind: select
-  title: このCMをご覧になって「ハーブの恵み」を飲んでみたいと思いましたか？
-  required: true
-
-yomei_shu_question5:
-  uuid: YomeiShuQuestion5
-  kind: select
-  title: このCMをご覧になって「ハーブの恵み」を買ってみたいと思いましたか？
-  required: true
-
-yomei_shu_question6:
-  uuid: YomeiShuQuestion6
-  kind: select
-  title: 「ハーブの恵み スパークリング」を以前からご存知でしたか？
-  required: true
-
-yomei_shu_question7:
-  uuid: YomeiShuQuestion7
-  kind: select
-  title: 「ハーブの恵み スパークリング」を飲んだことがありますか？
-  required: true
-
-yomei_shu_question8:
-  uuid: YomeiShuQuestion8
-  kind: select
-  title: 「ハーブの恵み」を以前からご存知でしたか？
-  required: true
-
-yomei_shu_question9:
-  uuid: YomeiShuQuestion9
-  kind: select
-  title: 「ハーブの恵み」を飲んだことがありますか？
-  required: true
-
-yomei_shu_question10:
-  uuid: YomeiShuQuestion10
-  kind: select
-  title: 最後に今回の動画を再生したきっかけを教えてください。
-  required: true
-
-# 養命酒
-yomei_shu_question1:
-  uuid: YomeiShuQuestion1
-  kind: radio
-  title: 性別をお答えください。
-  required: true
-
-yomei_shu_question2:
-  uuid: YomeiShuQuestion2
-  kind: numeric
-  title: 年齢をお答えください。
-  required: true
-
-yomei_shu_question3:
-  uuid: YomeiShuQuestion3
-  kind: select
-  title: このCMをご覧になって「ハーブの恵み」の香りに興味を持たれましたか？
-  required: true
-
-yomei_shu_question4:
-  uuid: YomeiShuQuestion4
-  kind: select
-  title: このCMをご覧になって「ハーブの恵み」を飲んでみたいと思いましたか？
-  required: true
-
-yomei_shu_question5:
-  uuid: YomeiShuQuestion5
-  kind: select
-  title: このCMをご覧になって「ハーブの恵み」を買ってみたいと思いましたか？
-  required: true
-
-yomei_shu_question6:
-  uuid: YomeiShuQuestion6
-  kind: select
-  title: 「ハーブの恵み スパークリング」を以前からご存知でしたか？
-  required: true
-
-yomei_shu_question7:
-  uuid: YomeiShuQuestion7
-  kind: select
-  title: 「ハーブの恵み スパークリング」を飲んだことがありますか？
-  required: true
-
-yomei_shu_question8:
-  uuid: YomeiShuQuestion8
-  kind: select
-  title: 「ハーブの恵み」を以前からご存知でしたか？
-  required: true
-
-yomei_shu_question9:
-  uuid: YomeiShuQuestion9
-  kind: select
-  title: 「ハーブの恵み」を飲んだことがありますか？
-  required: true
-
-yomei_shu_question10:
-  uuid: YomeiShuQuestion10
-  kind: select
-  title: 最後に今回の動画を再生したきっかけを教えてください。
-  required: true
-
-# プラスワン
-plus_one_question1:
-  uuid: PlusOneQuestion1
-  kind: radio
-  title: 性別を教えてください。
-  required: true
-
-plus_one_question2:
-  uuid: PlusOneQuestion2
-  kind: select
-  title: 年齢を教えてください。
-  required: true
-
-plus_one_question3:
-  uuid: PlusOneQuestion3
-  kind: select
-  title: もしオリジナルTシャツを作成するとしたらどのような場面ですか？
-  required: true
-
-plus_one_question4:
-  uuid: PlusOneQuestion4
-  kind: select
-  title: オリジナルTシャツの制作で重視するところはどこですか？
-  required: true
-
-plus_one_question5:
-  uuid: PlusOneQuestion5
-  kind: select
-  title: 『プラスワン』の動画を見て良いと思ったところはどこですか？
-  required: true
-
-plus_one_question6:
-  uuid: PlusOneQuestion6
-  kind: select
-  title: 【クイズ】動画の中で『プラスワン』の顧客満足度は何％でしたか？
-  required: true
-  answer_content: 92%
-
-plus_one_question7:
-  uuid: PlusOneQuestion7
-  kind: select
-  title: 『プラスワン』というサービスを知っていましたか？
-  required: true
-
-plus_one_question8:
-  uuid: PlusOneQuestion8
-  kind: select
-  title: 動画を見てサービスに興味を持ちましたか？
-  required: true
-
-plus_one_question9:
-  uuid: PlusOneQuestion9
-  kind: select
-  title: 動画を見てサービスを利用したいと思いましたか？
-  required: true
-
-plus_one_question10:
-  uuid: PlusOneQuestion10
-  kind: select
-  title: 今回なぜ動画を見ていただけましたか？
-  required: true
+  answer_content: MyText
+  answer_description: MyText
