--- a/dapi/test/fixtures/answers.yml
+++ b/dapi/test/fixtures/answers.yml
@@ -1,10 +1,13 @@
-# coding: utf-8
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-#one:
-#  uuid:
-#  campaign_id:
-#  enq_question_id: MyString
-#  user_id: MyString
-#  user_agent: MyString
-#  answer: MyText
+one:
+  enq_question_id: MyString
+  session_id: MyString
+  user_agent: MyString
+  answer: MyText
+
+two:
+  enq_question_id: MyString
+  session_id: MyString
+  user_agent: MyString
+  answer: MyText
